--- a/kata/index.html
+++ b/kata/index.html
@@ -7,28 +7,26 @@
   <link rel="stylesheet" href="all.css">
 </head>
 <body>
-  <div class="wrap">
-    <div class="container d-flex mb-24">
+  <div class="container">
+    <div class="content d-flex mb-24">
       <ul>
         <li class="d-flex mb-24">
           <img src="https://fakeimg.pl/96x96/" alt="">
           <section>
             <h2 class="title">Title Lorem</h2>
-            <p class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, natus.</p>
+            <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, nobis?</p>
           </section>
         </li>
         <li class="d-flex">
           <img src="https://fakeimg.pl/96x96/" alt="">
           <section>
             <h2 class="title">Title Lorem</h2>
-            <p class="content">Animi debitis magnam aliquam quod doloribus quam, recusandae minus possimus.</p>
+            <p class="content">Ea soluta minus ipsum laborum sapiente rem in. Perspiciatis, perferendis.</p>
           </section>
         </li>
       </ul>
       <img src="https://fakeimg.pl/216x216/" alt="">
     </div>
-    <footer class="content">頁尾文字</footer>
-  </div>
   </div>
 </body>
 </html>
