--- a/kata/index.html
+++ b/kata/index.html
@@ -27,6 +27,7 @@
       </ul>
       <img src="https://fakeimg.pl/216x216/" alt="">
     </div>
+    <footer class="content">頁尾文字</footer>
   </div>
 </body>
 </html>
