--- a/kata/index.html
+++ b/kata/index.html
@@ -11,21 +11,21 @@
     <div class="content d-flex mb-24">
       <ul>
         <li class="d-flex mb-24">
-          <img src="https://fakeimg.pl/96x96/" alt="">
+          <img src="https://fakeimg.pl/96x96/" alt="pic96">
           <section>
             <h2 class="title">Title Lorem</h2>
             <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, nobis?</p>
           </section>
         </li>
         <li class="d-flex">
-          <img src="https://fakeimg.pl/96x96/" alt="">
+          <img src="https://fakeimg.pl/96x96/" alt="pic96">
           <section>
             <h2 class="title">Title Lorem</h2>
             <p class="content">Ea soluta minus ipsum laborum sapiente rem in. Perspiciatis, perferendis.</p>
           </section>
         </li>
       </ul>
-      <img src="https://fakeimg.pl/216x216/" alt="">
+      <img src="https://fakeimg.pl/216x216/" alt="pic216">
     </div>
     <footer class="content">頁尾文字</footer>
   </div>
