--- a/weekThree/products-2.html
+++ b/weekThree/products-2.html
@@ -133,23 +133,43 @@
     <div class="container footer-container">
       <div class="footer-flex"><section class="footer-header">
         <ul class="footer-menu">
-          <li><a href="#">
+          <li>
+            <a href="./index.html">
             首頁
-          </a></li>
-          <li><a href="#">
+            </a>
+          </li>
+          <li>
+            <a href="./products.html">
             系列鏡框
-          </a></li>
-          <li><a href="#">
+            </a>
+          </li>
+          <li>
+            <a href="./stores.html">
             門市據點
-          </a></li>
-          <li><a href="#">
+            </a>
+          </li>
+          <li>
+            <a href="./Q&A.html">
             常見問題
-          </a></li>
+            </a>
+          </li>
         </ul>
         <ul class="footer-icons">
-          <li><a href="#"><img src="img/ic-social-fb.png" alt="fb"></a></li>
-          <li><a href="#"><img src="img/ic_social_ig.png" alt="ig"></a></li>
-          <li><a href="#"><img src="img/ic_social_line.png" alt="line"></a></li>
+          <li>
+            <a href="#">
+              <img src="img/ic-social-fb.png" alt="fb">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="img/ic_social_ig.png" alt="ig">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="img/ic_social_line.png" alt="line">
+            </a>
+          </li>
         </ul>
       </section>
       <section class="footer-contact">
@@ -157,13 +177,17 @@
           <span class="material-symbols-outlined">
             call
           </span>
-          0800-000-000
+          <a href="tel:0800000000">
+            0800-000-000
+          </a>
         </h2>
         <h2 class="fs-36 md-fs-24 sm-fs-16">
           <span class="material-symbols-outlined">
             mail
           </span>
-          glasses@business.com
+          <a href="mailto:glasses@business.com">
+            glasses@business.com
+          </a>
         </h2>
       </section>
     </div>
